fix movie title wrapping

--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -1,4 +1,9 @@
 .root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
 }
@@ -30,7 +35,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+}
+
+.movieTitle {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
 
 .movieButton {
